--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
     padding: 10px 15px;
 }
 
-.forma_input {
+.poisk_2 {
     border: 1px solid #d8d9d0;
     padding: 5px 5px;
     flex-grow: 1;
@@ -84,22 +84,6 @@ body {
 
 }
 
-.otchutttt {
-    overflow-y: auto;
-    height: 770px;
-    overflow-x: hidden;
-}
-
-.otchutttt__item {
-    position: relative;
-
-    border: 1px solid rgb(206, 132, 255);
-    border-radius: 10px;
-    padding: 10px;
-    margin: 20px;
-
-}
-
 .rabota {
     border: 1px solid #dbc7ff;
     border-radius: 10px;
@@ -121,4 +105,156 @@ body {
     left: 10px;
 
 
+}
+
+.menu__button {
+    background: #ffccff;
+    border-radius: 10px;
+    color: #74777B;
+    font-size: 20px;
+    padding: 10px;
+    border: none;
+    width: 80%;
+    margin-left: 35px;
+    cursor: pointer;
+}
+
+.menu__teg {
+    margin-top: 50px;
+    margin-left: 30px;
+    color: #74777B;
+    font-size: 30px;
+}
+
+.teg {
+    display: flex;
+    align-items: center;
+    padding: 15px 25px;
+    border-bottom: 1px solid #f1f2f6;
+    transition: all 0.3s ease;
+    cursor: pointer;
+    padding-bottom: 10px;
+    color: #2d3436;
+    font-size: 18px;
+    border-bottom: none;
+}
+
+.teg:hover {
+    background-color: #afafaf;
+    border-radius: 30px;
+    width: 70%;
+    padding-left: 35px;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+.poisk__input {
+    background: #FCFCFD;
+    border-radius: 5px;
+    border: 1px solid gray;
+    width: 80%;
+    margin-top: 25px;
+    margin-left: 20px;
+    padding: 10px;
+}
+
+.poisk {
+    display: flex;
+    gap: 10px;
+}
+
+.poisk__znach {
+    background: #ffccff;
+    margin-top: 25px;
+    padding: 20px;
+    border-radius: 5px;
+    color: #F0F0F0;
+    border: 1px solid gray;
+    cursor: pointer;
+}
+
+.zadacha {
+    margin-top: 30px;
+    margin-left: 20px;
+    margin-right: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    overflow-y: auto;
+}
+
+.zadacha1__vnut {
+    padding: 20px;
+    border: 1px solid #E3E2E5;
+    border-radius: 5px;
+    margin-bottom: 20px;
+    border-radius: 15px;
+    font-weight: bold;
+    position: relative;
+}
+
+.zad1 {
+    font-size: 30px;
+}
+
+.zad2 {
+    background: #F4F4F4;
+    width: fit-content;
+    border-radius: 10px;
+    text-align: center;
+    padding: 5px;
+    color: #495B6D;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+}
+
+.zad3 {
+    color: #495B6D;
+    margin-top: 20px;
+}
+
+.overlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0, 5);
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    display: none;
+}
+
+.okno {
+    background: #faf3f3;
+    width: 500px;
+    position: relative;
+    padding: 35px;
+}
+
+.okno__close {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 30px;
+}
+
+.okno__close:hover {
+    cursor: pointer;
+}
+
+.overlay_open {
+    display: flex;
+}
+
+.okno__form {
+    display: flex;
+    gap: 20px;
+}
+
+.okno__btn-save {
+    border-radius: 5px;
+    cursor: pointer;
 }
