--- a/style.css
+++ b/style.css
@@ -64,12 +64,12 @@ body {
     border-radius: 10px;
     width: 30px;
     height: 30px;
-
+    margin: 15px;
     border: 1px solid #a076ee;
     cursor: pointer;
     background: url('./img.png') no-repeat center center;
     background-size: contain;
-    padding: 9px;
+    padding: 12px;
 
 }
 
